--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ authors = [
 ]
 
 
-dependencies = ['markata~=0.5.0.dev0']
+dependencies = [
+    "markata~=0.5.0.dev0",
+    "setuptools>=68.0.0",
+]
 dynamic = ["version"]
 
 [tool.hatch.version]
