--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -29,11 +29,11 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: install uv
-        run: pip install uv
+      - name: install hatch
+        run: pip install hatch
 
       - name: build with markata
-        run: uv sync --system
+        run: hatch run build
 
       - name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3.0.0
